# hazel

./: .gitignore  INSTALL.md  README.md  _CoqProject  create-archive.sh  opam  setup.sh
papers/: LMCS-RMAD.md  POPL21-sleh.md
src/: Makefile  ad.ml  ad.mli  automatic_differentiation.ml  dim.ml  dune  dune-workspace  invert.ml  multivar_ad.ml  promises.ml  promises_cancel_effects.ml  promises_cancel_getcontext.ml  promises_eio.ml  ref.ml  stack_ad.ml  test.ml  test_ad.ml  vector.ml  vector.mli
theories/: adequacy.v  auto_diff.v  cascade.v  deep_handler.v  exceptions.v  heap.v  ieff.v  iterable.v  lang.v  lib.v  list_lib.v  ml_references.v  named_effects.v  named_effects_another_approach.v  notation.v  protocol_agreement.v  queue_lib.v  scheduler.v  selective_handler.v  shallow_as_deep.v  shallow_handler.v  shift_reset.v  state.v  tactics.v  weakestpre.v
theories/case_studies/: asynchronous_computation.v  asynchronous_computation_eio.v  asynchronous_computation_eio_cancel.v  asynchronous_computation_eio_withcontext.v  asynchronous_computation_passing.v  automatic_differentiation.v  callcc.v  control_inversion.v  exceptions.v  invariant_test_hazel.v  invariant_test_heaplang.v  iteration.v  list_lib.v  parameterized_protocols.v  parameterized_protocols_rec.v  queue_lib.v  shallow_as_deep.v  shift_reset.v  state.v
theories/language/: eff_lang.v  iris_language.v  neutral_contexts.v  notation.v  properties.v  semantics.v  syntax.v
theories/lib/: lib.v
theories/program_logic/: adequacy.v  atomics.v  basic_reasoning_rules.v  deep_handler_reasoning.v  logatom.v  (+8 more)
(+10 files in other folders)
