(env
 (dev
  (flags
   (:standard -w -50 -w -32 -w -27))))

(executables
 (names promises)
 (modules promises))

(executables
 (names promises_eio)
 (modules promises_eio))

(executables
 (names promises_cancel_effects)
 (modules promises_cancel_effects))

(executables
 (names promises_cancel_getcontext)
 (modules promises_cancel_getcontext))
